--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,19 @@
-Flask==3.0.2
-Jinja2==3.1.4
+Flask
+Jinja2
 httpx==0.27.2
 supabase==2.6.0
 supafunc==0.5.0
 postgrest==0.16.11
 gotrue==2.9.2
-gunicorn==23.0.0
-Flask-Caching==2.3.1
-aiohttp==3.11.14
-dash==3.0.1
-matplotlib==3.8.3
-python-dotenv==1.1.0
-pytz==2025.2
-pandas==2.2.0
-numpy==1.26.4
-requests==2.32.3
-Werkzeug==3.1.3
-click==8.1.8
-itsdangerous==2.2.0
-plotly==6.0.1
-pillow==11.1.0
-python-telegram-bot==22.0
+gunicorn
+Flask-Caching
+python-dotenv
+pandas==2.0.3
+numpy==1.24.4
+requests
+Werkzeug
+click
+itsdangerous
+plotly
+pillow
+python-telegram-bot
