chore: actualización de dependencias y configuración de zona horaria

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-Flask
+Flask==3.0.0
 Jinja2
 httpx==0.27.2
-supabase==2.6.0
+supabase==2.3.1
 supafunc==0.5.0
 postgrest==0.16.11
 gotrue==2.9.2
 gunicorn
 Flask-Caching
-python-dotenv
-pandas==2.0.3
+python-dotenv==1.0.0
+pandas==2.1.4
 numpy==1.24.4
 requests
 Werkzeug
@@ -17,4 +17,10 @@ itsdangerous
 plotly
 pillow
 python-telegram-bot
-matplotlib
+matplotlib==3.8.2
+python-binance==1.0.19
+pycryptodome==3.19.1
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+aiohttp==3.9.1
