--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Flask==3.0.0
 Jinja2
-httpx==0.27.2
+httpx[http2]==0.25.2
 supabase==2.3.1
-supafunc==0.5.0
-postgrest==0.16.11
+supafunc==0.3.3
+postgrest==0.13.2
 gotrue==2.9.2
 gunicorn
 Flask-Caching
@@ -11,7 +11,7 @@ python-dotenv==1.0.0
 pandas==2.1.4
 numpy==1.24.4
 requests
-python-telegram-bot==22.0
+python-telegram-bot==21.7.1
 pillow
 matplotlib==3.8.2
 python-binance==1.0.19
