--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 Flask==3.0.0
-Jinja2
+Jinja2==3.1.2
 httpx[http2]==0.25.2
 supabase==2.3.1
 supafunc==0.3.3
 postgrest==0.13.2
 gotrue==2.9.2
-gunicorn
-Flask-Caching
+gunicorn==21.2.0
+Flask-Caching==2.1.0
 python-dotenv==1.0.0
 pandas==2.1.4
 numpy==1.24.4
-requests
+requests==2.31.0
 python-telegram-bot==21.7.1
-pillow
+pillow==10.2.0
 matplotlib==3.8.2
 python-binance==1.0.19
 pycryptodome==3.19.1
@@ -20,3 +20,7 @@ Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 aiohttp==3.9.1
+storage3==0.6.1
+realtime==1.0.6
+websockets==11.0.3
+httpcore==1.0.7
