--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
 Flask==3.0.0
 Jinja2==3.1.2
-httpx[http2]==0.24.1
-supabase==1.2.0
-supafunc==0.3.2
-postgrest==0.10.8
-gotrue==1.3.0
+httpx[http2]>=0.27
+supabase>=2.15.0
+supafunc>=0.9.4
+postgrest>=1.0.1
+gotrue>=2.12.0
 gunicorn==21.2.0
 Flask-Caching==2.1.0
 python-dotenv==1.0.0
 pandas==2.1.4
 numpy==1.24.4
 requests==2.31.0
-python-telegram-bot==20.3
+python-telegram-bot>=22.0
 pillow==10.2.0
 matplotlib==3.8.2
 python-binance==1.0.19
@@ -19,8 +19,7 @@ pycryptodome==3.19.1
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
-aiohttp==3.9.1
-storage3==0.5.3
-realtime==1.0.6
-websockets==11.0.3
-httpcore==1.0.7
+aiohttp>=3.11.15
+storage3>=0.11.3
+realtime>=2.4.2
+websockets>=14.2
